# Changes

### Releases from [chrisant996/clink](https://github.com/chrisant996/clink) fork

#### v1.9.14

- Changed the suggestion list to ignore trailing whitespace when filtering for duplicate entries.

#### v1.9.13

- Fixed [#838](https://github.com/chrisant996/clink/issues/838); failure to download .cat file when trying to update from v1.9.12 -- a manual update is necessary.

#### v1.9.12

- Added new `suggestionlist.hide_hints` setting to control whether to hide input hints while using the suggestion list (input hints are normally controlled by the `comment_row.show_hints` setting, and are hidden by default while using the suggestion list).
- Added a type-ahead optimization in popup lists to avoid redundant or unnecessary processing during incremental find or filter input.
- Improve command line parsing to recognize when an executable exists with the same name as a built-in CMD command (e.g. "echo.exe") and predict whether CMD will run the built-in CMD command or the executable file.  This affects argmatchers, completion, and input line coloring.
- Changed Clink's built-in updater to verify digital signatures before applying an update.
- Fixed position of highlights in the suggestion list to consistently use the earliest matching position.
- Fixed [#835](https://github.com/chrisant996/clink/issues/835); Unicode input is garbled in popup lists (regression introduced in v1.8.0).
- Fixed edge cases where certain Unicode input could be misinterpreted in popup lists and in `clink-select-complete`.
- Fixed potential for a buffer overread if invalid UTF8 bytes are encountered.
- Internal logging improvements.

#### v1.9.11

- Added new Lua API [console.getoriginaltitle()](#console.getoriginaltitle) which gets what the OS considers to be the original console title.
- Fixed a potential crash if the terminal title is an empty string; an OS API is not behaving as documented (regression introduced in v1.9.10).

#### v1.9.10
